<resources>
    <string name="app_name">TP1.B</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_login">Sign-in</string>
    <string name="btn_login">SIGN-IN</string>
    <string name="btn_forgot">FORGOTTEN PASSWORD ?</string>
    <string name="btn_register">SIGN-UP</string>
    <string name="btn_identify">Identify</string>
    <string name="label_jumia">New on Jumia?</string>
    <string name="label_or">OR</string>
    <string name="btn_facebook">Continue with Facebook</string>
    <string name="label_register">Create account</string>
    <string name="label_create_account">Create a new account</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
        <string-array name="country_codes">
            <item>+33</item> <item>+1</item>  <item>+213</item> <item>+212</item> <item>+44</item> </string-array>
    <string name="label_equipement">equipement</string>
    <string name="label_floor">FLOOR</string>
    <string name="label_equipements">equipments</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="learn_app">LearnApp</string>
    <string name="habitats">Habitats</string>
    <string name="settings">Settings</string>
    <string name="close_button">Close</string>
    <string name="appliances_of">Appliances of </string>
    <string name="area">Area</string>
    <string name="retour">Retour</string>
    <string name="nouvelle_formation">Nouvelle Formation</string>
    <string name="menu">Menu</string>
    <string name="informations_g_n_rales">INFORMATIONS GÉNÉRALES</string>
    <string name="titre_de_la_formation">Titre de la formation</string>
    <string name="introduction_l_inclusion">Introduction à l\'inclusion</string>
    <string name="description">Description</string>
    <string name="comprendre_les_enjeux_de_l_inclusion_sociale_et_agir_au_quotidien">Comprendre les enjeux de l\'inclusion sociale et agir au quotidien</string>
    <string name="dur_e_minutes">Durée (minutes)</string>
    <string name="_45">45</string>
    <string name="th_matique">THÉMATIQUE</string>
    <string name="inclusion">🤝 Inclusion</string>
    <string name="environnement">🌿 Environnement</string>
    <string name="galit">⚖️ Égalité</string>
    <string name="tol_rance">❤️ Tolérance</string>
    <string name="sessions_associ_es">SESSIONS ASSOCIÉES</string>
    <string name="ajouter_une_session">+ Ajouter une session</string>
    <string name="enregistrer_la_formation">Enregistrer la formation</string>
</resources>